buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        classpath 'org.jsonschema2pojo:jsonschema2pojo-gradle-plugin:1.2.1'
    }
}

plugins {
    id 'com.github.ben-manes.versions' version '0.52.0'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

apply plugin: 'java'
apply plugin: 'groovy'
apply plugin: 'maven-publish'
apply plugin: 'jsonschema2pojo'

javadoc {
    source = sourceSets.main.allJava
    classpath = configurations.runtimeClasspath
    options.windowTitle = 'FINT Public 360 RPC Adapter'
    options.memberLevel = JavadocMemberLevel.PRIVATE
    destinationDir = file('./javadocs/')
}

group = 'no.novari'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    maven {
        url 'https://repo.fintlabs.no/releases'
    }
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'com.google.guava:guava:33.4.5-jre'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'org.apache.tika:tika-core:3.1.0'

    implementation 'org.glassfish.jersey.core:jersey-client:2.46'
    implementation 'org.glassfish.jersey.core:jersey-common:2.46'
    implementation 'org.jooq:jool-java-8:0.9.15'
    implementation 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'

    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'no.fint:fint-sse:2.0.1'

    implementation 'no.fint:fint-event-model:3.0.2'
    implementation 'no.fint:fint-relation-model:1.1.6'
    implementation 'no.fint:fint-model-resource:0.4.1'

    implementation 'no.fintlabs:fint-arkiv-case-defaults:4.4.0'
    implementation "no.fint:fint-arkiv-resource-model-java:${apiVersion}"
    implementation "no.fint:fint-administrasjon-model-java:${apiVersion}"

    implementation 'no.fintlabs:fint-antlr:1.1.1'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'com.azure:azure-storage-blob:12.26.1'
    implementation 'io.projectreactor:reactor-core:3.6.7'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'org.apache.commons:commons-text:1.12.0'

    testImplementation 'cglib:cglib-nodep:3.3.0'
    testImplementation 'org.spockframework:spock-spring:2.4-M5-groovy-4.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
    testImplementation 'javax.annotation:javax.annotation-api:1.3.2'
    testImplementation 'org.glassfish.jersey.media:jersey-media-sse:2.46'
}

bootRun {
    systemProperties System.properties
}

test {
    useJUnitPlatform()

    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

jsonSchema2Pojo {
    targetPackage = 'no.p360.model'
    sourceType = 'json'
    includeGetters = true
    includeSetters = true
}
